--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.cdnfonts.com/css/h-herein" rel="stylesheet">
 
 
@@ -14,22 +14,22 @@
 <body>
     <h1>Water vs Fire vs Leaf</h1><br>
     <button id="button">Start</button><br>
-    <img id="fireimg" width="30px" src="/Project6/icons/flame-svgrepo-com.svg" alt="">
+    <img id="fireimg" width="30px" src="/icons/flame-svgrepo-com.svg" alt="">
 
     <label id="fire" for="fireimg">0</label>
 
-    <img id="waterimg" width="30px" src="/Project6/icons/water-drop-svgrepo-com.svg" alt="">
+    <img id="waterimg" width="30px" src="/icons/water-drop-svgrepo-com.svg" alt="">
 
     <label id="water" for="waterimg">0</label>
 
-    <img id="leafimg" width="30px" src="/Project6/icons/leaf-svgrepo-com (1).svg" alt="">
+    <img id="leafimg" width="30px" src="/icons/leaf-svgrepo-com (1).svg" alt="">
 
     <label id="leaf" for="leafimg">0</label><br>
 
     <canvas id="canvas" width="400px" height="400px"></canvas>
 
 
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
