--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 <body>
     <h1>Water vs Fire vs Leaf</h1><br>
     <button id="button">Start</button><br>
-    <img id="fireimg" width="30px" src="/icons/flame-svgrepo-com.svg" alt="">
+    <img id="fireimg" width="30px" src="./icons/flame-svgrepo-com.svg" alt="">
 
     <label id="fire" for="fireimg">0</label>
 
-    <img id="waterimg" width="30px" src="/icons/water-drop-svgrepo-com.svg" alt="">
+    <img id="waterimg" width="30px" src="./icons/water-drop-svgrepo-com.svg" alt="">
 
     <label id="water" for="waterimg">0</label>
 
-    <img id="leafimg" width="30px" src="/icons/leaf-svgrepo-com (1).svg" alt="">
+    <img id="leafimg" width="30px" src="./icons/leaf-svgrepo-com (1).svg" alt="">
 
     <label id="leaf" for="leafimg">0</label><br>
 
