--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
     <canvas id="canvas" width="400px" height="400px"></canvas>
 
+    <h3 style=" font-family: 'h Herein', sans-serif;
+    color: chocolate;">Made By Subhan</h3>
+
 
     <script src="./main.js"></script>
 </body>
